Fixed UI being hidden by site container

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -17,6 +17,11 @@
     }
 
 
+    &.edit .site-container {
+        overflow: initial;
+    }
+
+
     .homepage-nav {
         margin-bottom: 0;
     }
